--- a/app-dystrybutor-obszar.html
+++ b/app-dystrybutor-obszar.html
@@ -98,6 +98,7 @@
                                             <th>Początek</th>
                                             <th>Koniec</th>
                                             <th>Wyjątki</th>
+                                            <th>Status</th>
                                             <th class="text-end">Opcje</th>
                                         </tr>
                                     </thead>
@@ -109,6 +110,9 @@
                                             <td>00-001</td>
                                             <td>00-010</td>
                                             <td></td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Aktywny</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
@@ -128,6 +132,9 @@
                                             <td>00-500</td>
                                             <td><span class="badge bg-warning rounded-pill px-2">Tak</span></td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Aktywny</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -145,6 +152,9 @@
                                             <td>01-101</td>
                                             <td>01-999</td>
                                             <td></td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Aktywny</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
@@ -164,6 +174,9 @@
                                             <td>25-399</td>
                                             <td><span class="badge bg-warning rounded-pill px-2">Tak</span></td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowany</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
                                                     <div class="col-auto">
@@ -181,6 +194,9 @@
                                             <td>32-001</td>
                                             <td>35-000</td>
                                             <td></td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowany</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-dystrybutor-obszar-szczegóły.html">Szczegóły</a></div>
