--- a/app-sprzedawca-uzytkownicy.html
+++ b/app-sprzedawca-uzytkownicy.html
@@ -110,6 +110,7 @@
                                             <th>Nazwisko</th>
                                             <th>Imię</th>
                                             <th>E-mail</th>
+                                            <th>Status</th>
                                             <th class="text-end">Opcje</th>
                                         </tr>
                                     </thead>
@@ -121,6 +122,9 @@
                                             <td>Chojnacki<br></td>
                                             <td>Robert</td>
                                             <td>robert.chojnacki@example.com<br></td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Aktywny</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-uzytkownicy-szczegoly.html">Profil</a></div>
@@ -140,6 +144,9 @@
                                             <td>Zofia</td>
                                             <td>zofia.rosczak@example.com</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Aktywny</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
@@ -157,6 +164,9 @@
                                             <td>Adamczewski</td>
                                             <td>Krzysztof</td>
                                             <td>krzysztof.adamczewski@example.com</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Aktywny</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-uzytkownicy-szczegoly.html">Profil</a></div>
@@ -176,6 +186,9 @@
                                             <td>Zygmunt</td>
                                             <td>zygmunt.sowinski@example.com</td>
                                             <td>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowany</span></span></div>
+                                            </td>
+                                            <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
@@ -193,6 +206,9 @@
                                             <td>Wójcicka</td>
                                             <td>Anna</td>
                                             <td>anna.wojcicka@example.com</td>
+                                            <td>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowany</span></span></div>
+                                            </td>
                                             <td>
                                                 <div class="row gx-2 d-flex justify-content-end align-items-center">
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-sprzedawca-uzytkownicy-szczegoly.html">Profil</a></div>
